Add custom README.