@@ -1,55 +1,182 @@
-# Features
+Ce dépôt contient l'instance GeoNetwork personnalisée pour les
+Parc nationaux de France. Cette instance foncionne en mode
+multinodes (cf. https://github.com/geonetwork/core-geonetwork/wiki/Multinodes-mode)
+avec un noeud par parc.
 
-* Immediate search access to local and distributed geospatial catalogues
-* Up- and downloading of data, graphics, documents, pdf files and any other content type
-* An interactive Web Map Viewer to combine Web Map Services from distributed servers around the world
-* Online editing of metadata with a powerful template system
-* Scheduled harvesting and synchronization of metadata between distributed catalogs
-* Support for OGC-CSW 2.0.2 ISO Profile, OAI-PMH, Z39.50 protocols
-* Fine-grained access control with group and user management
-* Multi-lingual user interface
 
-# Documentation
+# Personnalisation du catalogue
 
-User documentation is in the docs submodule in the current repository and is compiled into html pages during a release for publishing on
-a website.
+* Les logos des parcs sont ajoutés
+* Les thésaurus suivants ont été ajoutés :
+ * Contours des parcs
+ * Communes des parcs
+ * Départements
+ * Régions
+ * Thèmes INSPIRE
+ * GEMET (http://www.eionet.europa.eu/gemet/en/about/)
+* La liste des langues par défaut a été réduite.
+* La liste des trustedHost a été mise à jour
+* Configuration du service CSW de découverte
 
-Developer documentation is also in the docs submodule but is being migrated out of that project into the Readme files in each module
-in the project.  General documentation for the project as a whole is in this Readme and module specific documentation can be found in
-each module (assuming there is module specific documentation required).
 
-# Software Development
+Pour PNF, préconfiguration du moissonnage des fiches des autres parcs.
 
-Instructions for setting up a development environment/building Geonetwork/compiling user documentation/making a release see:
-[Software Development Documentation](/software_development/)
 
-# Testing
+# Installater le catalogue
 
-With regards to testing Geonetwork is a standard Java project and primarily depends on JUnit for testing.  However there is a very important
-issue to consider when writing JUnit tests in Geonetwork and that is the separation between unit tests and integration tests
+* Installer Java 7
+* Installer Tomcat 7
+* Installer le catalogue
+ * Option 1 : Télécharger le WAR de l'application
+ * Option 2 : Compiler l'application (pré-requis git et maven doivent être installé)
+```
+git clone --recursive https://github.com/titellus/geonetwork-pnf
+cd geonetwork-pnf
+git checkout -b stable-develop
+mvn clean install -DskipTests
+cp web/target/geonetwork.war $CATALINA_HOME/webapps/catalogue.war
+```
+* Configurer Tomcat
+```
+export CATALOGUE_DIR=/app/tomcat
+export JAVA_OPTS="$JAVA_OPTS -Xms1g -Xmx2g -XX:MaxPermSize=512m \
+              -Dgeonetwork.dir=$CATALOGUE_DIR/data/ \
+              -Dgeonetwork.schema.dir=$CATALOGUE_DIR/webapp/catalogue/WEB-INF/data/config/schema_plugins \
+              -Dgeonetwork.resources.dir=$CATALOGUE_DIR/webapp/catalogue \
+              -Dgeonetwork.codeList.dir=$CATALOGUE_DIR/webapp/catalogue/WEB-INF/data/config/codelist"
+```
+* Importer ou créer les bases de données
 
-* *Unit Tests* - In Geonetwork unit tests should be very very quick to execute and not start up any subsystems of the application in order to keep
-    the execution time of the unit tests very short.  Integration tests do not require super classes and any assistance methods can be static
-    imports, for example statically importing org.junit.Assert or org.junit.Assume or org.fao.geonet.Assert.
-* *Integration Tests* - Integration Test typically start much or all of Geonetwork as part of the test and will take longer to run than
-    a unit test.  However, even though the tests take longer they should still be implemented in such a way to be as efficient as possible.
-    Starting Geonetwork in a way that isolates each integration test from each other integration test is non-trivial.  Because of this
-    there are `abstract` super classes to assist with this.  Many modules have module specific Abstract classes.  For example at the time
-    that this is being written `domain`, `core`, `harvesters` and `services` modules all have module specific super classes that need to
-    be used.  (`harvesting` has 2 superclasses depending on what is to be tested.)
-    The easiest way to learn how to implement an integration test is to search for other integration tests in the same module as the class
-    you want to test.  The following list provides a few tips:
-    * *IMPORTANT*: All Integrations tests *must* end in IntegrationTest.  The build system assumes all tests ending in IntegrationTest is
-        an integration test and runs them in a build phase after unit tests.  All other tests are assumed to be unit tests.
-    * Prefer unit tests over Integration Tests because they are faster.
-    * Search the current module for IntegrationTest to find tests to model your integration test against
-    * This you might want integration tests for are:
-        * Services: If the service already exists and you quick need to write a test to debug/fix its behaviour.
-                    If you are writing a new service it is better to use Mockito to mock the dependencies of the service so the test is
-                    a unit test.
-        * Harvesters
-        * A behaviour that crosses much of the full system
 
-*org.fao.geonet.utils.GeonetHttpRequestFactory*: When making Http requests you should use org.fao.geonet.utils.GeonetHttpRequestFactory instead
-    of directly using HttpClient.  This is because there are mock instances of org.fao.geonet.utils.GeonetHttpRequestFactory that can
-    be used to mock responses when performing tests.
+# Lancer le catalogue
+
+Démarrer Tomcat pour lancer le catalogue.
+
+Lors du premier lancement, la structure des bases de données est crée avec les données
+par défaut. Chaque noeud est initialisé avec un compte admin/admin. Il est recommandé
+de :
+* changer le mot de passe du compte admin (cf. http://extranet.parcnational.fr/catalogue/pnf/fre/admin.console#/organization/users)
+* modifier le nom du catalogue (cf. http://extranet.parcnational.fr/catalogue/pnf/fre/admin.console#/settings/system)
+* modifier le logo du catalogue (cf. http://extranet.parcnational.fr/catalogue/pnf/fre/admin.console#/settings/logo)
+
+
+# Importer des fiches existantes
+
+S'il est nécessaire d'ajouter des fiches existantes au catalogue, le plus simple
+est de copier les fiches XML dans un répertoire du serveur et d'utiliser l'import
+en série (cf. http://extranet.parcnational.fr/catalogue/pnp/eng/catalog.edit#/import).
+
+Si les fiches importées doivent être publique, faire une recherche, sélectionner l'ensemble
+des fiches puis modifier les privilèges pour rendre les fiches accessibles à tous.
+
+# Ajouter un nouveau noeud
+
+
+* Créer la base de données du noeud
+```
+CREATE DATABASE catalogue_pnf
+  WITH ENCODING='UTF8'
+       OWNER="www-data"
+       CONNECTION LIMIT=-1;
+```
+* Créer la configuration du noeud
+ * option 1 : utiliser le script de création
+```
+cd WEB-INF/node-utils
+./node-mgr.sh www-data www-data pnf jdbc:postgresql://localhost:5432/catalogue_pnf postgres
+```
+ * option 2 : configuration manuelle
+  * WEB-INF/config-node.xml
+```
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans" xmlns:context="http://www.springframework.org/schema/context"
+       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+       xsi:schemaLocation="             http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans.xsd             http://www.springframework.org/schema/context http://www.springframework.org/schema/context/spring-context.xsd"
+       default-lazy-init="true">
+  <import resource="classpath*:/config-spring-geonetwork.xml"/>
+  <import resource="../config-db/database_migration.xml"/>
+  <context:property-override properties-ref="pnf-configuration-overrides"/>
+
+  <!-- Définir l'identifiant du noeud et
+  indiquer si le noeud est celui par défaut (un seul noeud
+  peut être celui par défaut). -->
+  <bean class="org.fao.geonet.NodeInfo" id="nodeInfo">
+    <property value="pnf" name="id"/>
+    <property value="true" name="defaultNode"/>
+  </bean>
+
+
+  <bean class="org.springframework.beans.factory.config.PropertiesFactoryBean" id="pnf-configuration-overrides">
+    <property name="properties">
+      <props>
+        <!-- Configurer ici la connexion à la
+        base de données. -->
+        <prop key="jdbcDataSource.username">www-data</prop>
+        <prop key="jdbcDataSource.password">www-data</prop>
+        <prop key="jdbcDataSource.maxActive">10</prop>
+        <prop key="jdbcDataSource.maxIdle">2</prop>
+        <prop key="jdbcDataSource.initialSize">0</prop>
+        <prop key="jdbcDataSource.Url">jdbc:postgresql://localhost:5432/catalogue_pnf</prop>
+      </props>
+    </property>
+  </bean>
+
+  <import resource="../config-db/postgres.xml"/>
+</beans>
+```
+  * WEB-INF/web.xml : Ajouter dans la webapp le servlet-mapping pour le noeud
+```
+  <servlet-mapping>
+    <servlet-name>gn-servlet</servlet-name>
+    <url-pattern>/pnf/*</url-pattern>
+  </servlet-mapping>
+```
+
+
+# Sauvegarder l'application
+
+* Sauvegarder les bases de données
+* Sauvegarder les répertoires des données de chaque instance ($CATALOGUE_DIR/data/)
+* Sauvegarder le WAR (si modification)
+
+
+
+
+# Lancer l'application à partir du codesource
+
+Si besoin, il est possible de lancer l'application à partir des sources de la
+manière suivante :
+
+```
+cd web
+export CATALOGUE_DIR=/home/francois/Workspace/github/pnf-geonetwork/web/src/main
+export MAVEN_OPTS="-Xms1g -Xmx2g -XX:MaxPermSize=512m \
+              -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5006 \
+              -Dgeonetwork.dir=$CATALOGUE_DIR/data/ \
+              -Dgeonetwork.schema.dir=$CATALOGUE_DIR/webapp/WEB-INF/data/config/schema_plugins \
+              -Dgeonetwork.resources.dir=$CATALOGUE_DIR/webapp \
+              -Dgeonetwork.codeList.dir=$CATALOGUE_DIR/webapp/WEB-INF/data/config/codelist"
+mvn jetty:run
+```
+
+
+# Divers
+
+
+## Pour lancer des fonctions SQL sur chaque base :
+
+```
+
+for db in `psql -qAt -U www-data -c "SELECT datname FROM pg_database WHERE datname like 'catalogue_%' AND datistemplate = false;" postgres` ;
+do
+  psql -U www-data -c "SELECT value FROM settings WHERE name = 'system/platform/version'" $db ;
+done
+
+or
+
+
+for db in `psql -qAt -U www-data -c "SELECT datname FROM pg_database WHERE datname like 'catalogue_%' AND datistemplate = false;" postgres` ;
+do
+  psql -U www-data -f tmp.sql $db ;
+done
+```
